

9/19/17
 - added gFlowMessage class to log gemc flow
 - moved detector construction to main
 - moved digitization to main
 - implementing some code conventions:

   - "global" in variable names corresponds to variables shared among threads.
   - "tlocal" in variable names corresponds to variables locals in threads.

7/17/17
 - moved gtouchable out of gemc

7/12/17
 - added gHit, GSensitiveDetector classes
 - associating gvolume with GSensitiveDetector
 - added default softwareVersion handling
 - added skipProcessHit to GSensitiveDetector
 - GVolume* added to GSensitiveDetector constructor
 - GTouchable constructor


7/11/17
 - starting gtouchable

7/10/17
 - less log message for factory, define verbosity better and screen log
 - add option g4command to execute g4 commands from gcard / command line

7/7/17
 - filename case more consistent
 - added QStackedWidget for right content
 - ladies and gentlemen we have a beam


6/29/17
 - added MasterGeant4.err error log

6/1/17
 - adding goptions to various classes. added gsetup with example.

5/12/17
 - managing G4cout in Master, Worker thread and gemc sequential mode

5/11/17
 - added detector construction template
 - scons path was wrong. fixed in the main SConstruct with Dir directive
 - added generator template
 - added redirecting output to custom session

5/10/17
 - respecting naming convention for source files containin classes definition
 - starting geant4 run manager
 - added template for run and run action
 - added nthread options, 0 will use all available

3/15/17
 - resumed changelong (still need past logs formatting)
 - proper splash messages
 - added GemcGUI instead of general window
 - added images resource

3/13/17
 - added gui code, and moc header compilation for xcode
 - created image dir

3/10/17
 - minor changes

3/21/17
 - compatibility with xcode 8

9/21/16
 - added additional options for splash. added loadResource function for qt qrc resources

7/11/16